backend/drm: does not restore custom modes
- Set a custom mode on an output
- Switch VT away
- Switch back
- Custom mode is not restored
Regression from !4237 (merged)
Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
The migration is almost done, at least the rest should happen in the background. There are still a few technical difference between the old cluster and the new ones, and they are summarized in this issue. Please pay attention to the TL:DR at the end of the comment.
Regression from !4237 (merged)
added backend/drm bug labels
changed the description
mentioned in commit emersion/wlroots@c12ed2f1
mentioned in merge request !4293 (merged)
mentioned in commit emersion/wlroots@f96d1876
mentioned in commit emersion/wlroots@307720d5